# DataForge

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  vite.config.ts
engine/: pyproject.toml
engine/engine/: __init__.py  main.py
engine/engine/analysis/: relations.py  schema.py
engine/engine/config/: __init__.py
engine/engine/db/: __init__.py  connector.py  profiler.py
engine/engine/dbt/: generator.py
engine/engine/llm/: __init__.py  agent.py  client.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: ConnectionDialog.css  ConnectionDialog.tsx  Settings.css  Settings.tsx
