[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataforge-engine"
version = "0.1.0"
description = "DataForge core engine — schema analysis, AI modeling, dbt generation"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "duckdb>=1.0",
    "psycopg2-binary>=2.9",
    "pymysql>=1.0",
    "requests>=2.31",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
dataforge-engine = "engine:main"

[tool.hatch.build.targets.wheel]
packages = ["engine/"]

[tool.ruff]
line-length = 100
target-version = "py311"
